--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/icons": "^4.11.3",
     "@reduxjs/toolkit": "^1.8.5",
     "@types/react-redux": "^7.1.24",
+    "axios": "^1.1.2",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
