--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@reduxjs/toolkit": "^1.8.5",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/react-redux": "^7.1.24",
     "axios": "^1.1.2",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.3.1",
     "next-auth": "^4.12.3",
     "react": "18.2.0",
